--- a/styling/style.css
+++ b/styling/style.css
@@ -1,3 +1,37 @@
+section.offline{
+    width: 100%;
+    height : 100%;
+    /* background: rgba(0, 0, 0, 0.144) ; */
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    margin: 0;
+z-index: 100;
+display: none;
+}
+div.offlinee{
+    width: 30%;
+    height: 30%;
+    padding: 20px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    text-align: center;
+    box-shadow: 0px 10px 20px 1px rgba(0, 0, 0, 0.575);
+    border-radius: 20px;
+}
+div.offlinee img{
+    width: 40%;
+    
+}
+div.offlinee h2{
+    color: red;
+}
+
 
 section.load{
     width: 100%;
