--- a/styling/style.css
+++ b/styling/style.css
@@ -10,6 +10,9 @@ section.offline{
 z-index: 100;
 display: none;
 }
+section{
+    margin: 80px 0px;
+}
 div.offlinee{
     width: 30%;
     height: 30%;
@@ -199,7 +202,7 @@ nav .logo img{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-bottom: 10%;
+    margin-bottom: 300px;
 }
 
 .sec1 h1{
@@ -231,6 +234,8 @@ section.sec2{
     /* background-color: var(--accent); */
     height: auto;
     padding: 0px 20px;
+
+    
 }
 .sec2 .image {
     /* border: 1px solid red; */
@@ -480,7 +485,7 @@ padding: 5px;
 
     .sec7{
         width: auto;
-        height: 50vh;
+        height: auto;
         background-color: var(--accent);
         padding: 30px 20px;
         margin-bottom: 0px;
@@ -676,7 +681,7 @@ padding: 5px;
      /* slider  */
      .swiper {
         width: 100%;
-        height: 50vh;
+        height: auto;
       }
   
       .swiper-slide {
