--- a/styling/responsive.css
+++ b/styling/responsive.css
@@ -41,7 +41,8 @@ font-weight: 500;
       flex-direction: column;
     } */
     header nav .logo img{
-        width: 80px;
+        width: 50px;
+        margin-bottom: 21%;
     }
     
     header nav .diraction{
